# CodexPy

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  behavior-driven-workflows.md  memory-system.md  project-evolution.md  roadmap.md
src/codexpy/: __init__.py  behavior.py  bootstrap.py  cli.py  codex.py  memory.py  models.py  paths.py  repair.py  reports.py  storage.py  validation.py
tests/: test_mvp.py
