[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codexpy"
version = "0.1.0"
description = "AI-native Python project bootstrapper and engineering memory system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CodexPy contributors" }]
dependencies = []

[project.scripts]
codexpy = "codexpy.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
